[package]
name = "liege"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
rand = "0.8.4"
noise = "0.8.2"
legion = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
benimator = "4.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.109", features = [] }
